# dagster-dlt-dbt-local-demo

./: .gitignore  README.md  hackernews_top_stories.csv  hackernews_top_story_ids.json  pyproject.toml  workspace.yaml
dagster_quickstart/: __init__.py  assets.py
dagster_quickstart/dlt63/: README.md  __init__.py  filesystem_pipeline.py  resource_63.py
dagster_quickstart/dlt63/.dlt/: .sources  config.toml
dagster_quickstart/dlt63/filesystem/: _63_load_duckdb_schema.yaml  __init__.py  readers.py
dagster_quickstart/resources/: __init__.py
