[tool.poetry]
name = "dagster-quickstart"
version = "0.1.0"
description = ""
authors = ["slmcfall <sean.mcfall@mindoula.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
dagster-webserver = "^1.7.1"
dagster = "^1.7.1"
dlt = "^0.4.8"
duckdb = "^0.10.2"
pandas = "^2.2.2"
psutil = "^5.9.8"
pyarrow = "^15.0.2"

[tool.dagster]
module_name = "dagster_quickstart"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
